-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b29
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8056397 | emb-9 | Thomas Schatzl | P2 | Resolved | Fixed | b29 |
| JDK-8063407 | 8u45 | Thomas Schatzl | P2 | Resolved | Fixed | b01 |
| JDK-8055652 | 8u40 | Thomas Schatzl | P2 | Closed | Fixed | b03 |
| JDK-8070965 | emb-8u47 | Thomas Schatzl | P2 | Resolved | Fixed | team |
Nightly shows failure to startup bigapps/weblogic due to
# Internal Error (/opt/jprt/T/P1/204918.jmasamit/s/src/share/vm/gc_implementation/g1/g1PageBasedVirtualSpace.cpp:129), pid=20184, tid=140484275312384
# guarantee(is_area_uncommitted(start, size_in_pages)) failed: Specified area is not uncommitted
#
Only on Linux, both x86-64 and x86.
# Internal Error (/opt/jprt/T/P1/204918.jmasamit/s/src/share/vm/gc_implementation/g1/g1PageBasedVirtualSpace.cpp:129), pid=20184, tid=140484275312384
# guarantee(is_area_uncommitted(start, size_in_pages)) failed: Specified area is not uncommitted
#
Only on Linux, both x86-64 and x86.
- backported by
-
JDK-8056397 Bigapp weblogic+medrec fails to startup after JDK-8038423
-
- Resolved
-
-
JDK-8063407 Bigapp weblogic+medrec fails to startup after JDK-8038423
-
- Resolved
-
-
JDK-8070965 Bigapp weblogic+medrec fails to startup after JDK-8038423
-
- Resolved
-
-
JDK-8055652 Bigapp weblogic+medrec fails to startup after JDK-8038423
-
- Closed
-
- relates to
-
JDK-8038423 G1: Decommit memory within the heap
-
- Resolved
-